@@ -14,6 +14,7 @@ import com.microsoft.gctoolkit.jvm.JavaVirtualMachine;
 import com.microsoft.gctoolkit.message.DataSourceChannel;
 import com.microsoft.gctoolkit.message.DataSourceParser;
 import com.microsoft.gctoolkit.message.JVMEventChannel;
+import org.jspecify.annotations.Nullable;
 
 import java.io.IOException;
 import java.lang.reflect.Constructor;
@@ -34,9 +35,7 @@ import java.util.stream.Collectors;
 
 import static java.lang.Class.forName;
 
-/**
- * The primary API for analyzing Java Garbage Collection (GC) logs.
- */
+/// The primary API for analyzing Java Garbage Collection (GC) logs.
 public class GCToolKit {
 
     private static final Logger LOGGER = Logger.getLogger(GCToolKit.class.getName());
@@ -52,59 +51,53 @@ public class GCToolKit {
                 && !GCTOOLKIT_DEBUG.contains("-" + className)));
     }
 
-    /**
-     * Print a debug message to System.out if gctoolkit.debug is empty, is set to "all",
-     * or contains "className" but does not contain "-className".
-     * For example, to enable debug logging for all classes except UnifiedG1GCParser:
-     * <code>-Dgctoolkit.debug=all,-com.microsoft.gctoolkit.parser.UnifiedG1GCParser</code>
-     *
-     * @param message Supplies the message to log. If null, nothing will be logged.
-     */
-    public static void LOG_DEBUG_MESSAGE(Supplier<String> message) {
+    /// Print a debug message to System.out if gctoolkit.debug is empty, is set to "all",
+    /// or contains "className" but does not contain "-className".
+    /// For example, to enable debug logging for all classes except UnifiedG1GCParser:
+    /// `-Dgctoolkit.debug=all,-com.microsoft.gctoolkit.parser.UnifiedG1GCParser`
+    ///
+    /// @param message Supplies the message to log. If null, nothing will be logged.
+    public static void LOG_DEBUG_MESSAGE(@Nullable Supplier<String> message) {
         if (DEBUGGING && message != null) {
             StackTraceElement[] stackTrace = Thread.currentThread().getStackTrace();
             String methodName = stackTrace[2].getMethodName();
             String className = stackTrace[2].getClassName();
             String fileName = stackTrace[2].getFileName();
-            int lineNumber = stackTrace[2].getLineNumber();
+            var lineNumber = stackTrace[2].getLineNumber();
             if (isDebugging(className)) {
-                System.out.println(String.format("DEBUG: %s.%s(%s:%d): %s", className, methodName, fileName, lineNumber, message.get()));
+                IO.println("DEBUG: %s.%s(%s:%d): %s".formatted(className, methodName, fileName, lineNumber, message.get()));
             }
         }
     }
 
-    private final HashSet<DataSourceParser> registeredDataSourceParsers = new HashSet<>();
+    private final Set<DataSourceParser> registeredDataSourceParsers = new HashSet<>();
     private List<Aggregation> registeredAggregations;
     private JVMEventChannel jvmEventChannel = null;
     private DataSourceChannel dataSourceChannel = null;
 
-    /**
-     * Instantiate a GCToolKit object. The same GCToolKit object can be used to analyze
-     * more than one GC log. It is not necessary to create a GCToolKit object for
-     * each GC log to be analyzed. Please note, however, that GCToolKit API is not
-     * thread safe.
-     */
+    /// Instantiate a GCToolKit object. The same GCToolKit object can be used to analyze
+    /// more than one GC log. It is not necessary to create a GCToolKit object for
+    /// each GC log to be analyzed. Please note, however, that GCToolKit API is not
+    /// thread safe.
     public GCToolKit() {
         // Allow for adding aggregations from source code,
         // but don't corrupt the ones loaded by the service loader
         this.registeredAggregations = new ArrayList<>();
     }
 
-    /**
-     * Loads all Aggregations defined in the application module through
-     * the java.util.ServiceLoader model. To register a class that
-     * provides the {@link Aggregation} API, define the following
-     * in {@code module-info.java}:
-     * <pre>
-     * import com.microsoft.gctoolkit.aggregator.Aggregation;
-     * import com.microsoft.gctoolkit.sample.aggregation.HeapOccupancyAfterCollectionSummary;
-     * 
-     * module com.microsoft.gctoolkit.sample {
-     *     ...
-     *     provides Aggregation with HeapOccupancyAfterCollectionSummary;
-     * }
-     * </pre>
-     */
+    /// Loads all Aggregations defined in the application module through
+    /// the java.util.ServiceLoader model. To register a class that
+    /// provides the [Aggregation] API, define the following
+    /// in `module-info.java`:
+    /// ```
+    /// import com.microsoft.gctoolkit.aggregator.Aggregation;
+    /// import com.microsoft.gctoolkit.sample.aggregation.HeapOccupancyAfterCollectionSummary;
+    ///
+    /// module com.microsoft.gctoolkit.sample {
+    ///     ...
+    ///     provides Aggregation with HeapOccupancyAfterCollectionSummary;
+    /// }
+    /// ```
     public void loadAggregationsFromServiceLoader() {
         try {
             ServiceLoader.load(Aggregation.class)
@@ -120,29 +113,25 @@ public class GCToolKit {
         }
     }
 
-    /**
-     * Registers an {@code Aggregation} class which can be used to perform analysis
-     * on {@code JVMEvent}s. GCToolKit will instantiate the Aggregation when needed.
-     * <p>
-     * The {@link JavaVirtualMachine#getAggregation(Class)}
-     * API will return an Aggregation that was used in the log analysis. Even though
-     * an Aggregation was registered, the {@code getAggregation} method will return
-     * null if the Aggregation was not used in the analysis.
-     *
-     * @param aggregation the Aggregation class to register.
-     * @see Aggregation
-     * @see JavaVirtualMachine
-     */
+    /// Registers an `Aggregation` class which can be used to perform analysis
+    /// on `JVMEvent`s. GCToolKit will instantiate the Aggregation when needed.
+    ///
+    /// The [JavaVirtualMachine#getAggregation(Class)]
+    /// API will return an Aggregation that was used in the log analysis. Even though
+    /// an Aggregation was registered, the `getAggregation` method will return
+    /// null if the Aggregation was not used in the analysis.
+    ///
+    /// @param aggregation the Aggregation class to register.
+    /// @see Aggregation
+    /// @see JavaVirtualMachine
     public void loadAggregation(Aggregation aggregation) {
         registeredAggregations.add(aggregation);
     }
 
-    /**
-     * Load the first implementation of JavaVirtualMachine that can process
-     * the supplied DataSource, GCLog in this instance.
-     * @param logFile GCLogFile DataSource
-     * @return JavaVirtualMachine implementation.
-     */
+    /// Load the first implementation of JavaVirtualMachine that can process
+    /// the supplied DataSource, GCLog in this instance.
+    /// @param logFile GCLogFile DataSource
+    /// @return JavaVirtualMachine implementation.
     private JavaVirtualMachine loadJavaVirtualMachine(GCLogFile logFile) {
         return logFile.getJavaVirtualMachine();
     }
@@ -154,7 +143,7 @@ public class GCToolKit {
 
     private void loadDataSourceChannel() {
         if ( dataSourceChannel == null) {
-            ServiceLoader<DataSourceChannel> serviceLoader = ServiceLoader.load(DataSourceChannel.class);
+            var serviceLoader = ServiceLoader.load(DataSourceChannel.class);
             if (serviceLoader.findFirst().isPresent()) {
                 loadDataSourceChannel(serviceLoader
                         .stream()
@@ -165,7 +154,7 @@ public class GCToolKit {
                 try {
                     Class clazz = forName("com.microsoft.gctoolkit.vertx.VertxDataSourceChannel", true, Thread.currentThread().getContextClassLoader());
                     loadDataSourceChannel((DataSourceChannel) clazz.getConstructors()[0].newInstance());
-                } catch (Exception e) {
+                } catch (Exception _) {
                     throw new ServiceConfigurationError("Unable to find a suitable DataSourceChannel provider");
                 }
             }
@@ -179,7 +168,7 @@ public class GCToolKit {
 
     private void loadJVMEventChannel() {
         if ( jvmEventChannel == null) {
-            ServiceLoader<JVMEventChannel> serviceLoader = ServiceLoader.load(JVMEventChannel.class);
+            var serviceLoader = ServiceLoader.load(JVMEventChannel.class);
             if (serviceLoader.findFirst().isPresent()) {
                 loadJVMEventChannel(ServiceLoader.load(JVMEventChannel.class)
                         .stream()
@@ -190,34 +179,30 @@ public class GCToolKit {
                 try {
                     Class clazz = forName("com.microsoft.gctoolkit.vertx.VertxJVMEventChannel", true, Thread.currentThread().getContextClassLoader());
                     loadJVMEventChannel((JVMEventChannel) clazz.getConstructors()[0].newInstance());
-                } catch (Exception e) {
+                } catch (Exception _) {
                     throw new ServiceConfigurationError("Unable to find a suitable provider to create a JVMEventChannel");
                 }
             }
         }
     }
 
-    /**
-     * This method allows full control over which DataSourceParsers are used to parse the DataSource.
-     * This method should be called before the {@link #analyze(DataSource)} method.
-     * DataSourceParsers loaded by this method are used in place of those that are ordinarily loaded via
-     * the service provider interface.
-     * Use the {@link #addDataSourceParser(DataSourceParser)} method to load a DataSourceParser in addition
-     * to those loaded by the service provider interface.
-     * @param dataSourceParser An implementation of DataSourceParser that will be used to parse the DataSource.
-     */
+    /// This method allows full control over which DataSourceParsers are used to parse the DataSource.
+    /// This method should be called before the [#analyze(DataSource)] method.
+    /// DataSourceParsers loaded by this method are used in place of those that are ordinarily loaded via
+    /// the service provider interface.
+    /// Use the [#addDataSourceParser(DataSourceParser)] method to load a DataSourceParser in addition
+    /// to those loaded by the service provider interface.
+    /// @param dataSourceParser An implementation of DataSourceParser that will be used to parse the DataSource.
     public void loadDataSourceParser(DataSourceParser dataSourceParser) {
         registeredDataSourceParsers.add(dataSourceParser);
     }
 
     private List<DataSourceParser> additiveParsers = new ArrayList<>();
 
-    /**
-     * Add a DataSourceParser to be used to parse a DataSource. The DataSourceParser will be used in addition
-     * to those loaded by the service provider interface. This method should be called before the
-     * {@link #analyze(DataSource)} method.
-     * @param dataSourceParser An implementation of DataSourceParser that will be used to parse the DataSource.
-     */
+    /// Add a DataSourceParser to be used to parse a DataSource. The DataSourceParser will be used in addition
+    /// to those loaded by the service provider interface. This method should be called before the
+    /// [#analyze(DataSource)] method.
+    /// @param dataSourceParser An implementation of DataSourceParser that will be used to parse the DataSource.
     public void addDataSourceParser(DataSourceParser dataSourceParser) {
         additiveParsers.add(dataSourceParser);
     }
@@ -256,12 +241,12 @@ public class GCToolKit {
             dataSourceParsers = Arrays.stream(parsers)
                     .map(parserName -> {
                         try {
-                            Class<?> clazz = forName(parserName, true, Thread.currentThread().getContextClassLoader());
+                            var clazz = forName(parserName, true, Thread.currentThread().getContextClassLoader());
                             return Optional.of(clazz.getConstructors()[0].newInstance());
                         } catch (ClassNotFoundException
                                 | InstantiationException
                                 | IllegalAccessException
-                                | InvocationTargetException e) {
+                                | InvocationTargetException _) {
                             return Optional.empty();
                         }
                     })
@@ -291,25 +276,23 @@ public class GCToolKit {
                 .collect(HashSet::new, Set::addAll, Set::addAll);
     }
 
-    /**
-     * Perform an analysis on a GC log file. The analysis will use the Aggregations
-     * that were {@link #loadAggregation(Aggregation) registered}, if appropriate for
-     * the GC log file.
-     *
-     * @param dataSource The log to analyze, typically a
-     *                   {@link SingleGCLogFile} or
-     *                   {@link RotatingGCLogFile}.
-     * @return a representation of the state of the Java Virtual Machine resulting
-     * from the analysis of the GC log file.
-     * @throws IOException when something goes wrong reading the data source
-     */
+    /// Perform an analysis on a GC log file. The analysis will use the Aggregations
+    /// that were [registered][#loadAggregation(Aggregation)], if appropriate for
+    /// the GC log file.
+    ///
+    /// @param dataSource The log to analyze, typically a
+    ///                   [SingleGCLogFile] or
+    ///                   [RotatingGCLogFile].
+    /// @return a representation of the state of the Java Virtual Machine resulting
+    /// from the analysis of the GC log file.
+    /// @throws IOException when something goes wrong reading the data source
     public JavaVirtualMachine analyze(DataSource<?> dataSource) throws IOException  {
-        GCLogFile logFile = (GCLogFile)dataSource;
-        Set<EventSource> events = loadDataSourceParsers(logFile.diary());
+        var logFile = (GCLogFile)dataSource;
+        var events = loadDataSourceParsers(logFile.diary());
         JavaVirtualMachine javaVirtualMachine = loadJavaVirtualMachine(logFile);
         try {
-            List<Aggregator<? extends Aggregation>> filteredAggregators = filterAggregations(events);
-            long start = System.currentTimeMillis();
+            var filteredAggregators = filterAggregations(events);
+            var start = System.currentTimeMillis();
             javaVirtualMachine.analyze(filteredAggregators, jvmEventChannel, dataSourceChannel);
             LOGGER.log(Level.FINE,() -> "Analysis completed in " + (System.currentTimeMillis() - start) + "ms");
         } catch(Throwable t) {
@@ -322,7 +305,7 @@ public class GCToolKit {
         List<Aggregator<? extends Aggregation>> aggregators = new ArrayList<>();
         for (Aggregation aggregation : registeredAggregations) {
             LOG_DEBUG_MESSAGE(() -> "Evaluating: " + aggregation.getClass().getName());
-            Constructor<? extends Aggregator<?>> constructor = constructor(aggregation);
+            var constructor = constructor(aggregation);
             if (constructor == null) {
                 LOGGER.log(Level.WARNING, "Cannot find one of: default constructor or @Collates annotation for " + aggregation.getClass().getName());
                 continue;
